--- a/estilos/index.css
+++ b/estilos/index.css
@@ -108,9 +108,9 @@
 .Conteiner {
     padding-top: 50px;
     width: 100%;
-    height: 700px;
+    height: 500px;
     /*background-image: url(../imagens/FundoHome6.jpeg);*/
-    background-color: #6b6b6b;
+    background-color: #cecece;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right;
