--- a/estilos/Login.css
+++ b/estilos/Login.css
@@ -6,7 +6,7 @@
     }
 
     body {
-      background: linear-gradient(to right, #54c4a4, #006647);
+      background: linear-gradient(to right, rgb(100, 248, 201), rgb(212, 31, 236));
       display: flex;
       justify-content: center;
       align-items: center;
